04. Jul. 2013 - amo -  many changes for Context (JACPContext) and FXComponent, components are now implemented and not extended.
24. Jun. 2013 - amo -  start initial work on context object
30. May  2013 - amo -  overall cleanup and and Java 8 changes
29. May. 2013 - amo -  FXWorkbenchHandler and FXUtil.findRootByObserveableId converted to stream API
29. May. 2013 - amo -  first changes with java8 stream API in FXUtil, be aware code is running since jdk 8 build 91
28. May  2013 - amo -  Add PerspectiveRegistry
28. May  2013 - amo -  FXWorkbenchHandler, add OnShow / OnHide functionality
26. May  2013 - amo -  FXWorkbenchHandler, prepared for OnShow, OnHide annotation usage
06. May  2013 - amo -  FXAction, changes due to changes in Action interface
06. May  2013 - amo -  FXComponentCoordinator: fixed bug with local/global messages
02. May  2013 - amo -  FXWorkbenchHandler: fixed bug with empty perspectives
23. Apr. 2013 - amo -  FXUtil: findRootByObserveableId,getObserveableById  remove unused synchronisation
23. Apr. 2013 - amo -  FXComponentCoordinator: removed unused synchronisation in   handleMessage
23. Apr. 2013 - amo -  AStatelessCallbackComponent: remove unused init synchronisation
21. Apr. 2013 - amo -  TearDownWorker: check if component is still active before execute @OnTearDown.
12. Feb. 2013 - amo -  JACPManagedDialog: add cache for singleton dialogs
09. Feb  2013 - pete - JACPOptionPane: auto-hide not mandatory - available as option -> avoid disappearing dialogs, if they are chained
06. Feb. 2013 - amo -  FXComponentReplaceWorker: execute this.executeComponentViewPostHandle before parentComponentCheck
04. Feb. 2013 - pete - LayoutUtil: added some more util-functionalities to CSS- and LayoutUtil
24. Jan. 2013 - amo -  JACPManagedDialog: add managed dialog class to create managed, fxml/javafx components and have access to di container
24. Jan. 2013 - amo -  FXComponentCoordinator: removed component list and replaced calls with calls to registry